--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add the viewport meta tag for responsiveness -->
     <title>Pickup Line Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
-        <div class="container">
-            <div class="pickup-container">
-                <div class="pickup-content">
-                    <div id="pickup-line">Click "Generate" to get a pickup line!</div>
-                    <button id="copy-button">Copy</button>
-                </div>
-                <div><p></p></div>
+        <div class="pickup-container">
+            <div class="pickup-content">
+                <div id="pickup-line">Click "Generate" to get a pickup line!</div>
+            </div>
+            <br>
+            <div class="button-container">
                 <button id="generate-button">Generate</button>
+                <button id="copy-button">Copy</button>
             </div>
         </div>
     </main>
