--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
         })(window, document, "clarity", "script", "irfl4i75v7");
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add the viewport meta tag for responsiveness -->
     <title>Pickup Line Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Fixed Header (behaves like a footer) -->
-    <header class="fixed-header">
-        <div class="container">
-            <img src="logo.png" alt="Logo" class="header-logo">
-        </div>
-    </header>
-
+        <!-- Fixed Header (behaves like a footer) -->
+        <header class="fixed-header">
+            <div class="container">
+                <img src="logo.png" alt="Logo" class="header-logo">
+            </div>
+        </header>
     <main>
         <div class="pickup-container">
             <div class="pickup-content">
@@ -30,20 +29,14 @@
             <div class="button-container">
                 <button id="generate-button">Generate</button>
                 <button id="copy-button">Copy</button>
-                <button id="vote-button">
-                    <span class="triangle"></span> <!-- Add a triangle icon -->
-                    Vote
-                </button>
             </div>
         </div>
     </main>
-    
     <footer>
         <div class="container">
             <p>Made with ❤️ and ☕ by Saurao Dalvi</p>
         </div>
     </footer>
-    
     <script src="script.js"></script>
 </body>
 </html>
