--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
         </div>
     </main>
     <footer>
-        <div class="container">
-            <p>Made with ❤️ and ☕ by Saurao Dalvi</p>
+        <div class="container" style="text-align: center;">
+            <p>Made with ❤️ and ☕</p>
+            <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+            <script>
+                kofiWidgetOverlay.draw('sauraodalvi', {
+                    'type': 'floating-chat',
+                    'floating-chat.donateButton.text':'',
+                    'floating-chat.donateButton.background-color': '#fc3b72',
+                    'floating-chat.donateButton.text-color': '#fff'
+                });
+            </script>
         </div>
     </footer>
     <script src="script.js"></script>
