--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
         </div>
     </main>
     <footer>
+
         <div class="container" style="text-align: center;">
-            <p>Made with ❤️ and ☕</p>
+            <p>May include explicit content</p>
             <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
             <script>
                 kofiWidgetOverlay.draw('sauraodalvi', {
                     'type': 'floating-chat',
                     'floating-chat.donateButton.text':'',
-                    'floating-chat.donateButton.background-color': '#fc3b72',
+                    'floating-chat.donateButton.background-color': '#fc3b7200',
                     'floating-chat.donateButton.text-color': '#fff'
                 });
             </script>
